--- a/Lesson.html
+++ b/Lesson.html
@@ -54,7 +54,7 @@
       <div style="flex: 1;"><img src="./assets/img/level.png" alt=""></div>
       <div style="flex: 1;"><img class="g-right" src="./assets/img/question.png" alt=""></div>
     </div>
-    <button class="show-modal">Show Bottom Sheet</button>
+    <button class="show-modal center">Show Bottom Sheet</button>
   </div>
   <div class="bottom-sheet">
     <div class="sheet-overlay"></div>
